# email_assist_draft

./: .env.example  .gitignore  AGENTS.md  README.md  langgraph.json  pyproject.toml
.cursor/commands/: generatemermaiddiagrammd.md
.cursor/plans/: checkpointer_schema_and_auto-triage_efa9b0ae.plan.md  email_agent_phased_implementation_d99ca526.plan.md  email_agent_plan_and_structure_eb88b8a8.plan.md  mock_emails_and_supabase_checkpointer_1bcff032.plan.md  single_graph_two_subagents.plan.md
.cursor/rules/: phased-execution.mdc  project-docs-continuous.mdc
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
docs/: ARCHITECTURE.md  CONFIGURATION.md  DATABASE.md  FILES_AND_MODULES.md  GLOSSARY.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  PROMPTS.md  RUNNING_AND_TESTING.md
docs/code-explanations/: README.md  config.md  db_checkpointer.md  db_persist_messages.md  db_store.md  db_studio_checkpointer.md  email_assistant_hitl_memory_gmail.md  fixtures_mock_emails.md  migrations.md  nodes_input_router.md  nodes_mark_as_read.md  nodes_prepare_messages.md  nodes_triage.md  nodes_triage_interrupt.md  prompts.md  schemas.md  scripts.md  simple_agent.md  tools_common.md  tools_gmail_auth.md  (+5 more)
migrations/: 000_drop_email_assistant_schema.sql  001_email_assistant_tables.sql  002_checkpoint_created_at.sql
notebooks/: run_agent_sdk.ipynb
scripts/: debug_triage.py  run_agent.py  run_mock_email.py  setup_db.py  simulate_gmail_email.py  test_gmail_read.py  watch_gmail.py
(+51 files in other folders)
